<resources>
    <string name="app_name" translatable="false">다온(Daon)</string>

    <!--    First Start Activity        -->
    <string name="btn_name_rcmd_first_start">이름 추천</string>
    <string name="btn_already_have_first_start">이미 있어요</string>
    <string name="tv_guide_first_start">아직 \n한글이름이 \n없네요.</string>

    <!--    Name Input Activity         -->
    <string name="tv_guide_name_input">바로 명함을\n만들어드릴게요!</string>
    <string name="tv_name_name_input">이름</string>
    <string name="tv_next_name_input">다음</string>

    <!--    Gender Birth Input Activity -->
    <string name="tv_guide_info_enter">어울리는 이름을\n추천해 드릴게요!</string>
    <string name="btn_next_info_enter">다음</string>
    <string name="tv_gender_info_enter">성별</string>
    <string name="tv_male_info_enter">남</string>
    <string name="tv_female_info_enter">여</string>
    <string name="tv_birthday_info_enter">생일</string>
    <string name="tv_month_info_enter">월</string>
    <string name="tv_day_info_enter">일</string>

    <!--    Email Phone Input Activity  -->
    <string name="tv_big_guide_email_phone_input">명함에 들어갈\n정보를 입력해주세요!</string>
    <string name="tv_small_guide_email_phone_input">원하지 않으면 입력하지 않아도 됩니다.</string>
    <string name="tv_email_email_phone_input">이메일</string>
    <string name="tv_phone_email_phone_input">전화번호</string>
    <string name="tv_next_email_phone_input">다음</string>

    <!--    After Order Activity        -->
    <string name="tv_big_guide_after_order">김가온님의 \n명함을 \n제작하고 있어요.</string>
    <string name="tv_small_guide_after_order">조금만 기다려 주세요 :)</string>
    <string name="btn_view_card_after_order">내 명함 보기</string>
    <string name="btn_map_after_order">주문 내역</string>

    <!--    Name Rcmd Activity          -->
    <string name="tv_big_guide_name_rcmd">이름 추천</string>
    <string name="tv_small_guide_name_rcmd">: 순 우리말 이름입니다.</string>
    <string name="btn_selected_name_rcmd">선택 완료</string>
    <string name="btn_rcmd_again_name_rcmd">다시 추천받기</string>
    <string name="tv_no_fav_name_name_rcmd">마음에 드는 이름이 없나요?</string>
    <string name="tv_check_guide_name_rcmd">선택한 이름이\n맞나요?</string>
    <string name="btn_yes_name_rcmd">예</string>
    <string name="btn_no_name_rcmd">아니요</string>

    <!--    Select Design Activity  -->
    <string name="tv_big_guide_select_design">명함 선택</string>
    <string name="tv_small_guide_select_design">: 한국을 대표하는 상징물을\n일러스트로 표현했습니다.
    </string>
    <string name="tv_preview_select_design">미리보기</string>
    <string name="tv_selected_select_design">선택 완료</string>

    <!--    Design Ver Activity     -->
    <!--N타워-->
    <string name="tv_ntower_select_design">N타워</string>
    <string name="tv_ntower_is_select_design">N타워는</string>
    <string name="tv_ntower_desc_select_design">서울의 중심, 서울의 가장 아름다운 모습을 한눈에\n내려다 볼 수 있는 복합문화공간 입니다.\n다양한 미디어아트와 함께 색다른 문화예술을\n경험하실 수 있는 서울의 랜드마크 입니다.

    </string>

    <!--    Design Hor Activity      -->
    <!--무궁화-->
    <string name="tv_sharon_p_select_design">무궁화 1</string>
    <string name="tv_sharon_g_select_design">무궁화 2</string>
    <string name="tv_sharon_is_select_design">무궁화는</string>
    <string name="tv_sharon_desc_select_design">대한민국을 상징하는 꽃입니다.\n어디서나 잘 자라고 매일 새로 꽃을 피우는\n생명력이 민족 수난기의 우리 민족과 닮았다 하여\n민중의 애국심을 상징하는 꽃이 되었습니다.</string>
    <!--경복궁-->
    <string name="tv_gung_select_design">경복궁</string>
    <string name="tv_gung_is_select_design">경복궁은</string>
    <string name="tv_gung_desc_select_design">조선시대의 궁궐 중 가장 중심이 되는 법궁입니다.\n궁의 왼쪽에는 역대 왕들과 왕비의 신위를 모신\n종묘가 있으며, 오른쪽에는 토지와
        곡식의 신에게\n제사를 지내는 사직단이 자리잡고 있습니다.
    </string>

    <!--    Preview Activity            -->
    <string name="tv_guide_preview">명함을 제작하시겠습니까?</string>
    <string name="tv_yes_preview">예</string>

    <!--    Recipient Input Activity    -->
    <string name="tv_big_guide_recipient_info">수령인 정보</string>
    <string name="tv_small_guide_recipient_info">: 명함 수령인의\n정보를 알려주세요.</string>
    <string name="tv_name_recipient_info">이름</string>
    <string name="tv_phone_recipient_info">핸드폰 뒷번호</string>
    <string name="tv_4digits_recipient_info">(4자리)</string>
    <string name="tv_complete_recipient_info">입력 완료</string>

    <!--    Pick Up Loc Activity        -->
    <string name="tv_big_guide_pick_up_loc">수령 장소</string>
    <string name="tv_small_guide_pick_up_loc">: 명함 수령 장소를\n선택해주세요.</string>
    <string name="tv_complete_pick_up_loc">선택 완료</string>
    <string name="tv_area1_1_pick_up_loc">제1 여객터미널</string>
    <string name="tv_area1_2_pick_up_loc">1층 입국장</string>
    <string name="tv_area1_3_pick_up_loc">1층 4번 출구</string>
    <string name="tv_area1_4_pick_up_loc">다온 명함 수령센터</string>
    <string name="tv_area2_1_pick_up_loc">제1 여객터미널</string>
    <string name="tv_area2_2_pick_up_loc">3층 출국장</string>
    <string name="tv_area2_3_pick_up_loc">3층 F 카운터 부근</string>
    <string name="tv_area2_4_pick_up_loc">다온 명함 수령센터</string>
    <string name="tv_area3_1_pick_up_loc">제2 여객터미널</string>
    <string name="tv_area3_2_pick_up_loc">1층 입국장</string>
    <string name="tv_area3_3_pick_up_loc">1층 2번 출구</string>
    <string name="tv_area3_4_pick_up_loc">다온 명함 수령센터</string>
    <string name="tv_area4_1_pick_up_loc">제2 여객터미널</string>
    <string name="tv_area4_2_pick_up_loc">3층 출국장</string>
    <string name="tv_area4_3_pick_up_loc">3층 F 카운터 부근</string>
    <string name="tv_area4_4_pick_up_loc">다온 명함 수령센터</string>

    <!--    Payment Activity            -->
    <string name="tv_guide_payment">결제</string>

    <!--    Order History Activity      -->
    <string name="tv_guide_location_info">주문 내역</string>
    <string name="tv_name_order_history">수령인 이름</string>
    <string name="tv_phone_order_history">핸드폰 뒷번호</string>
    <string name="tv_date_order_history">수령 일시</string>
    <string name="tv_price_order_history">가격</string>
    <string name="tv_help_call_location_info">전화해서 도움받기</string>
    <string name="tv_hard_to_find_location_info">수령 장소를 찾기 힘든가요?</string>

    <!--    My Card Activity            -->
    <string name="tv_big_guide_my_card">내 명함</string>
    <string name="tv_small_guide_my_card">열심히 제작하고 있어요 :)</string>
</resources>
