<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmailPhoneInputActivity">

    <EditText
            android:includeFontPadding="false"
            android:gravity="center"
            android:background="@drawable/round_20_light_gray" android:textAlignment="center"
            android:fontFamily="@font/notosanscjkkr_medium" android:textSize="17sp"
            android:layout_width="269dp"
            android:textColor="@color/darkGray"
            android:layout_height="40dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/et_phone_email_phone_input"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_email_phone_input" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:includeFontPadding="false"
            android:gravity="center"
            android:background="@drawable/round_20_light_gray" android:textAlignment="center"
            android:fontFamily="@font/notosanscjkkr_medium" android:textSize="17sp"
            android:layout_width="269dp"
            android:layout_height="40dp"
            android:textColor="@color/darkGray"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email_email_phone_input"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_email_phone_input" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/tv_email_email_phone_input"
            android:layout_width="wrap_content"
            android:layout_height="36dp" android:id="@+id/tv_email_email_phone_input"
            android:includeFontPadding="false" android:fontFamily="@font/notosanscjkkr_medium" android:textSize="25sp"
            android:textColor="@color/fontGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_small_guide_email_phone_input"
            android:layout_marginTop="68dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/tv_phone_email_phone_input"
            android:includeFontPadding="false" android:fontFamily="@font/notosanscjkkr_medium" android:textSize="25sp"
            android:textColor="@color/fontGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_phone_email_phone_input"
            app:layout_constraintTop_toBottomOf="@+id/et_email_email_phone_input" android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/tv_small_guide_email_phone_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_small_guide_email_phone_input"
            app:layout_constraintTop_toBottomOf="@+id/tv_big_guide_email_phone_input" android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:includeFontPadding="false" android:textColor="@color/fontGray"
            android:fontFamily="@font/notosanscjkkr_regular"/>
    <TextView
            android:text="@string/tv_big_guide_email_phone_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_big_guide_email_phone_input"
            android:includeFontPadding="false" android:fontFamily="@font/notosanscjkkr_bold" android:textSize="25sp"
            android:textColor="@color/fontGray" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="63dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/tv_next_email_phone_input"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/tv_next_email_phone_input"
            android:background="@color/mainColor" android:textColor="#FFFFFF" android:textSize="30sp"
            android:fontFamily="@font/notosanscjkkr_regular"
            app:layout_constraintBottom_toBottomOf="parent" android:includeFontPadding="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>