<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.OrderHistoryActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
            android:text="@string/tv_guide_location_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_guide_location_info"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/notosanscjkkr_bold" android:textSize="41sp" android:textColor="@color/fontGray"
            android:includeFontPadding="false" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="27dp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/tv_guide_location_info"
                  app:layout_constraintBottom_toTopOf="@+id/tv_hard_to_find_location_info">
        <RelativeLayout
                android:id="@+id/relative_loc" android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/round_5_white"
                android:elevation="10dp"
                android:layout_marginHorizontal="18dp">
            <ImageView
                    android:id="@+id/iv_area_location_info"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                       android:background="@drawable/area_1_1"
                       android:layout_marginBottom="20dp"/>
            <TextView
                    android:id="@+id/tv_area1_location_info"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/tv_area1_1_pick_up_loc"
                    android:fontFamily="@font/notosanscjkkr_bold"
                    android:textColor="@color/mainColor"
                    android:textSize="17sp"
                    android:includeFontPadding="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="9dp"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/tv_area2_location_info"
                      android:text="@string/tv_area1_2_pick_up_loc"
                      android:layout_alignParentRight="true"
                      android:layout_below="@+id/tv_area1_location_info"
                      android:layout_marginRight="9dp"
                      android:fontFamily="@font/notosanscjkkr_regular"
                      android:textColor="@color/mainColor"
                      android:textSize="17sp"
                      android:includeFontPadding="false"
            />
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_centerHorizontal="true"
                          android:layout_marginBottom="12dp" android:layout_alignBottom="@+id/iv_area_location_info">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/tv_area1_3_pick_up_loc"
                          android:fontFamily="@font/notosanscjkkr_bold"
                          android:textColor="@color/mainColor"
                          android:textSize="11sp"
                          android:id="@+id/tv_area3_pick_up_loc"
                          android:includeFontPadding="false"
                          android:layout_gravity="right"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/tv_area1_4_pick_up_loc"
                          android:fontFamily="@font/notosanscjkkr_regular"
                          android:textColor="@color/mainColor"
                          android:id="@+id/tv_area4_pick_up_loc"
                          android:textSize="11sp"
                          android:includeFontPadding="false"
                />
            </LinearLayout>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                android:background="@drawable/round_5_white"
                android:layout_marginBottom="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:text="Jessica"
                        android:layout_width="176dp"
                        android:layout_height="24dp" android:id="@+id/textView11"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/round_15_light_gray"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/darkGray" android:includeFontPadding="false"
                        android:gravity="center"/>
                <TextView
                        android:text="Jessica"
                        android:layout_width="176dp"
                        android:layout_height="24dp" android:id="@+id/tv_name_order_history"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/round_15_light_gray"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/darkGray" android:includeFontPadding="false"
                        android:gravity="center"/>
                <TextView
                        android:text="0486"
                        android:layout_width="176dp"
                        android:layout_height="24dp" android:id="@+id/tv_phon_order_history"
                        android:background="@drawable/round_15_light_gray"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/darkGray" android:includeFontPadding="false"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_order_history" android:layout_marginTop="17dp"/>
                <TextView
                        android:text="Oct 4 2019"
                        android:layout_width="176dp"
                        android:layout_height="24dp" android:id="@+id/tv_date_order_history"
                        android:background="@drawable/round_15_light_gray"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/darkGray" android:includeFontPadding="false"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phon_order_history" android:layout_marginTop="17dp"/>
                <TextView
                        android:text="15,000원"
                        android:layout_width="176dp"
                        android:layout_height="24dp" android:id="@+id/tv_price_order_history"
                        android:background="@drawable/round_15_light_gray"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/darkGray" android:includeFontPadding="false"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_date_order_history" android:layout_marginTop="17dp"/>
                <TextView
                        android:text="@string/tv_name_order_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView6"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/fontGray" android:includeFontPadding="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="@+id/textView11"
                        app:layout_constraintTop_toTopOf="@+id/textView11"/>
                <TextView
                        android:text="@string/tv_phone_order_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView8"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/fontGray" android:includeFontPadding="false"
                        app:layout_constraintTop_toTopOf="@+id/tv_phon_order_history"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_phon_order_history"
                        app:layout_constraintEnd_toStartOf="@+id/tv_phon_order_history" android:layout_marginEnd="23dp"/>
                <TextView
                        android:text="@string/tv_date_order_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView9"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/fontGray" android:includeFontPadding="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_date_order_history"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_date_order_history"/>
                <TextView
                        android:text="@string/tv_price_order_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView10"
                        android:fontFamily="@font/notosanscjkkr_medium" android:textSize="12sp"
                        android:textColor="@color/fontGray" android:includeFontPadding="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_price_order_history"
                        app:layout_constraintTop_toTopOf="@+id/tv_price_order_history"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
        <TextView
                android:text="@string/tv_hard_to_find_location_info"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" android:id="@+id/tv_hard_to_find_location_info"
                android:textSize="17sp" android:textColor="@color/mainColor" android:includeFontPadding="false"
                app:layout_constraintBottom_toTopOf="@+id/tv_help_call_location_info"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="13dp"/>

        <TextView
                android:text="@string/tv_help_call_location_info"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="71dp" android:id="@+id/tv_help_call_location_info"
                tools:layout_editor_absoluteX="145dp" app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/mainColor" android:fontFamily="@font/notosanscjkkr_regular"
                android:textSize="30sp" android:textColor="#FFFFFF" android:textAlignment="gravity"
                android:includeFontPadding="false"/>
    </LinearLayout>
</ScrollView>