<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".RecipientInputActivity">

    <TextView
            android:text="@string/tv_big_guide_recipient_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_big_guide_recipient_info"
            android:includeFontPadding="false" android:fontFamily="@font/notosanscjkkr_bold" android:textSize="41sp"
            android:textColor="@color/fontGray"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="27dp"/>
    <TextView
            android:text="@string/tv_small_guide_recipient_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_small_guide_recipient_info"
            app:layout_constraintTop_toBottomOf="@+id/tv_big_guide_recipient_info" android:layout_marginTop="4dp"
            android:textColor="@color/fontGray" android:textSize="15sp"
            android:fontFamily="@font/notosanscjkkr_demilight" android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:lineHeight="22sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/tv_complete_recipient_info"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/tv_complete_recipient_info"
            android:includeFontPadding="false" android:background="@color/mainColor" android:gravity="center"
            android:textColor="#FFFFFF" android:fontFamily="@font/notosanscjkkr_regular" android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_small_guide_recipient_info"
            app:layout_constraintBottom_toTopOf="@+id/tv_complete_recipient_info"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_height="300dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="42dp" android:layout_width="205dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_recipient_info"
                android:layout_marginTop="15dp" android:id="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/round_21_light_gray">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:ems="10"
                    android:id="@+id/et_name_recipient_input"
                    app:layout_constraintTop_toTopOf="parent"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    android:background="@android:color/transparent" android:textAlignment="center"
                    android:fontFamily="@font/notosanscjkkr_medium" android:textSize="25sp"
                    android:textColor="@color/darkGray"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                android:id="@+id/linearLayout3" android:layout_marginTop="47dp">
            <TextView
                    android:text="@string/tv_phone_recipient_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_phone_recipient_info"
                    android:layout_weight="1" android:fontFamily="@font/notosanscjkkr_medium"
                    android:textColor="@color/fontGray" android:textSize="25sp" android:includeFontPadding="false"/>
            <TextView
                    android:text="@string/tv_4digits_recipient_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_4digits_recipient_info"
                    android:layout_weight="1"
                    android:layout_gravity="bottom" android:includeFontPadding="false"
                    android:fontFamily="@font/notosanscjkkr_medium" android:textSize="13sp"
                    android:textColor="@color/fontGray"/>
        </LinearLayout>
        <EditText
                android:layout_width="205dp"
                android:layout_height="42dp"
                android:inputType="number"
                android:ems="10"
                android:gravity="center"
                android:includeFontPadding="false"
                android:id="@+id/et_phone_recipient_info"
                android:maxLength="4"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/round_21_light_gray" android:textAlignment="center"
                android:fontFamily="@font/notosanscjkkr_medium" android:textSize="25sp"
                android:textColor="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/tv_name_recipient_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name_recipient_info"
                android:fontFamily="@font/notosanscjkkr_medium" android:textColor="@color/fontGray"
                android:textSize="25sp" android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>