<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".AfterOrderActivity">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="42dp" android:id="@+id/guideline"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_big_guide_after_order"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="91dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:fontFamily="@font/notosanscjkkr_bold"
            android:textSize="36sp" android:textColor="@color/mainColor"/>
    <TextView
            android:text="@string/tv_small_guide_after_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_small_guide_after_order" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_big_guide_after_order" android:textColor="@color/mainColor"
            android:fontFamily="@font/notosanscjkkr_regular" android:textSize="17sp" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/btn_map_after_order"
            android:layout_width="276dp"
            android:layout_height="59dp" android:id="@+id/btn_map_after_order"
            android:textAllCaps="false"
            android:background="@drawable/round_5_main_color" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="27dp" android:fontFamily="@font/notosanscjkkr_regular"
            android:textColor="#FFFFFF" android:textSize="27sp" android:includeFontPadding="false"/>
    <Button
            android:text="@string/btn_view_card_after_order"
            android:layout_width="276dp"
            android:layout_height="59dp"
            android:id="@+id/btn_view_card_after_order"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_map_after_order" android:layout_marginBottom="14dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/round_5_light_gray"
            android:shadowColor="@null"
            android:fontFamily="@font/notosanscjkkr_regular"
            android:textColor="@color/mainColor" android:textSize="27sp" android:includeFontPadding="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>